--- a/archives/toutiao-search/2023-10-21.md
+++ b/archives/toutiao-search/2023-10-21.md
@@ -1,57 +1,73 @@
 # 2023-10-21
 
-共 103 条
+共 114 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 21 2023 07:00:54 GMT+0800 (China Standard Time) -->
-1. [市监局回应啤酒厂职工原料仓小便](https://so.toutiao.com/search?keyword=市监局回应啤酒厂职工原料仓小便)
-1. [央视专访俄罗斯总统普京](https://so.toutiao.com/search?keyword=央视专访俄罗斯总统普京)
-1. [又是一年好“丰景”](https://so.toutiao.com/search?keyword=又是一年好“丰景”)
-1. [河北千亩农田被挖成大坑](https://so.toutiao.com/search?keyword=河北千亩农田被挖成大坑)
+<!-- 最后更新时间 Sat Oct 21 2023 08:22:55 GMT+0800 (China Standard Time) -->
+1. [前车油量耗尽 后车司机看手机撞上](https://so.toutiao.com/search?keyword=前车油量耗尽+后车司机看手机撞上)
 1. [上海高架“拳王”打晕变道司机](https://so.toutiao.com/search?keyword=上海高架“拳王”打晕变道司机)
+1. [又是一年好“丰景”](https://so.toutiao.com/search?keyword=又是一年好“丰景”)
+1. [央视专访俄罗斯总统普京](https://so.toutiao.com/search?keyword=央视专访俄罗斯总统普京)
+1. [幼儿园里孩子们体验剥玉米](https://so.toutiao.com/search?keyword=幼儿园里孩子们体验剥玉米)
 1. [以色列逮捕哈马斯发言人等60多人](https://so.toutiao.com/search?keyword=以色列逮捕哈马斯发言人等60多人)
-1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
 1. [警方公开征集一女网红违法线索](https://so.toutiao.com/search?keyword=警方公开征集一女网红违法线索)
-1. [北京公交司机开车戴耳机养鸟系杜撰](https://so.toutiao.com/search?keyword=北京公交司机开车戴耳机养鸟系杜撰)
-1. [宁波一家三口相继患上支原体肺炎](https://so.toutiao.com/search?keyword=宁波一家三口相继患上支原体肺炎)
-1. [伊朗警告“其它各方”或卷入战争](https://so.toutiao.com/search?keyword=伊朗警告“其它各方”或卷入战争)
-1. [以军称约1000吨武器已运抵以色列](https://so.toutiao.com/search?keyword=以军称约1000吨武器已运抵以色列)
-1. [巴以地区冲突引发“蝴蝶效应”](https://so.toutiao.com/search?keyword=巴以地区冲突引发“蝴蝶效应”)
-1. [肺炎支原体感染11月或将迎感染高峰](https://so.toutiao.com/search?keyword=肺炎支原体感染11月或将迎感染高峰)
 1. [美称将制裁伊朗导弹活动 中方回应](https://so.toutiao.com/search?keyword=美称将制裁伊朗导弹活动+中方回应)
+1. [北京公交司机开车戴耳机养鸟系杜撰](https://so.toutiao.com/search?keyword=北京公交司机开车戴耳机养鸟系杜撰)
+1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
+1. [伊朗警告“其它各方”或卷入战争](https://so.toutiao.com/search?keyword=伊朗警告“其它各方”或卷入战争)
+1. [河北千亩农田被挖成大坑](https://so.toutiao.com/search?keyword=河北千亩农田被挖成大坑)
+1. [巴以地区冲突引发“蝴蝶效应”](https://so.toutiao.com/search?keyword=巴以地区冲突引发“蝴蝶效应”)
+1. [伊朗警告美国不要向以色列运送武器](https://so.toutiao.com/search?keyword=伊朗警告美国不要向以色列运送武器)
+1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
+1. [台风“三巴”致广东茂名多地受灾](https://so.toutiao.com/search?keyword=台风“三巴”致广东茂名多地受灾)
+1. [河南大哥非洲开会 中式英语火出圈](https://so.toutiao.com/search?keyword=河南大哥非洲开会+中式英语火出圈)
 1. [84岁钢琴家刘诗昆得子 发文感谢爱人](https://so.toutiao.com/search?keyword=84岁钢琴家刘诗昆得子+发文感谢爱人)
-1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
-1. [新郎去接亲百名乡亲拦车讨喜](https://so.toutiao.com/search?keyword=新郎去接亲百名乡亲拦车讨喜)
-1. [河北唐山：盐碱地上金穗弯腰谷飘香](https://so.toutiao.com/search?keyword=河北唐山：盐碱地上金穗弯腰谷飘香)
-1. [女司机不卸车衣盲开几米后追尾](https://so.toutiao.com/search?keyword=女司机不卸车衣盲开几米后追尾)
-1. [青岛啤酒公司回应员工在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒公司回应员工在原料仓小便)
-1. [儿童积木现不雅图案 商家赔2元](https://so.toutiao.com/search?keyword=儿童积木现不雅图案+商家赔2元)
-1. [曝华为昇腾910B可对标英伟达A100](https://so.toutiao.com/search?keyword=曝华为昇腾910B可对标英伟达A100)
-1. [证监会连发三份指引](https://so.toutiao.com/search?keyword=证监会连发三份指引)
-1. [美战略轰炸机首降韩国 朝鲜发警告](https://so.toutiao.com/search?keyword=美战略轰炸机首降韩国+朝鲜发警告)
-1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
-1. [法国为何高调介入中东乱局](https://so.toutiao.com/search?keyword=法国为何高调介入中东乱局)
-1. [狂犬病毒不只源于狂犬](https://so.toutiao.com/search?keyword=狂犬病毒不只源于狂犬)
-1. [女子吐槽高铁一盒葡萄60元仅200克](https://so.toutiao.com/search?keyword=女子吐槽高铁一盒葡萄60元仅200克)
-1. [夫妻俩骑行东北借宿废弃铁皮屋](https://so.toutiao.com/search?keyword=夫妻俩骑行东北借宿废弃铁皮屋)
-1. [村干部为何频繁催交新农合](https://so.toutiao.com/search?keyword=村干部为何频繁催交新农合)
-1. [董宇辉求俞敏洪带他去相亲](https://so.toutiao.com/search?keyword=董宇辉求俞敏洪带他去相亲)
 1. [杨迪为猫狗发声：可以不爱但别伤害](https://so.toutiao.com/search?keyword=杨迪为猫狗发声：可以不爱但别伤害)
-1. [法国酿酒商抗议进口西班牙葡萄酒](https://so.toutiao.com/search?keyword=法国酿酒商抗议进口西班牙葡萄酒)
+1. [男孩被打哭 妈妈看到视频后笑懵了](https://so.toutiao.com/search?keyword=男孩被打哭+妈妈看到视频后笑懵了)
+1. [市监局回应啤酒厂职工原料仓小便](https://so.toutiao.com/search?keyword=市监局回应啤酒厂职工原料仓小便)
+1. [科大讯飞回应美国AI芯片出口管制](https://so.toutiao.com/search?keyword=科大讯飞回应美国AI芯片出口管制)
+1. [肺炎支原体感染11月或将迎感染高峰](https://so.toutiao.com/search?keyword=肺炎支原体感染11月或将迎感染高峰)
+1. [青岛啤酒公司回应员工在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒公司回应员工在原料仓小便)
+1. [女司机不卸车衣盲开几米后追尾](https://so.toutiao.com/search?keyword=女司机不卸车衣盲开几米后追尾)
+1. [广西一企业爆炸致2死4伤4失联](https://so.toutiao.com/search?keyword=广西一企业爆炸致2死4伤4失联)
+1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
+1. [董宇辉求俞敏洪带他去相亲](https://so.toutiao.com/search?keyword=董宇辉求俞敏洪带他去相亲)
+1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
+1. [曝华为昇腾910B可对标英伟达A100](https://so.toutiao.com/search?keyword=曝华为昇腾910B可对标英伟达A100)
+1. [宁波一家三口相继患上支原体肺炎](https://so.toutiao.com/search?keyword=宁波一家三口相继患上支原体肺炎)
+1. [美战略轰炸机首降韩国 朝鲜发警告](https://so.toutiao.com/search?keyword=美战略轰炸机首降韩国+朝鲜发警告)
+1. [证监会连发三份指引](https://so.toutiao.com/search?keyword=证监会连发三份指引)
+1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
+1. [儿童积木现不雅图案 商家赔2元](https://so.toutiao.com/search?keyword=儿童积木现不雅图案+商家赔2元)
+1. [以防长公布对加沙地带战争计划](https://so.toutiao.com/search?keyword=以防长公布对加沙地带战争计划)
+1. [疑似理想MEGA最强设计出炉](https://so.toutiao.com/search?keyword=疑似理想MEGA最强设计出炉)
+1. [货车驾驶室被铁锥贯穿 司机身亡](https://so.toutiao.com/search?keyword=货车驾驶室被铁锥贯穿+司机身亡)
 1. [专家谈为什么教培行业必须“死”](https://so.toutiao.com/search?keyword=专家谈为什么教培行业必须“死”)
 1. [A股“市场底”还有多远](https://so.toutiao.com/search?keyword=A股“市场底”还有多远)
 1. [潘家园摊主谈卖摆件给智利总统](https://so.toutiao.com/search?keyword=潘家园摊主谈卖摆件给智利总统)
+1. [老人穿红衣进羊圈被羊顶撞身亡](https://so.toutiao.com/search?keyword=老人穿红衣进羊圈被羊顶撞身亡)
+1. [警方通报女童遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=警方通报女童遭开门杀后被公交碾压)
+1. [夫妻俩骑行东北借宿废弃铁皮屋](https://so.toutiao.com/search?keyword=夫妻俩骑行东北借宿废弃铁皮屋)
+1. [男子买砗磲摆件3年后被刑拘](https://so.toutiao.com/search?keyword=男子买砗磲摆件3年后被刑拘)
+1. [中国驻多国使馆发布紧急提醒](https://so.toutiao.com/search?keyword=中国驻多国使馆发布紧急提醒)
+1. [戈麦斯将被剥夺世界杯冠军头衔](https://so.toutiao.com/search?keyword=戈麦斯将被剥夺世界杯冠军头衔)
+1. [新郎去接亲百名乡亲拦车讨喜](https://so.toutiao.com/search?keyword=新郎去接亲百名乡亲拦车讨喜)
+1. [网友：智利总统来找我买水晶了](https://so.toutiao.com/search?keyword=网友：智利总统来找我买水晶了)
+1. [村干部为何频繁催交新农合](https://so.toutiao.com/search?keyword=村干部为何频繁催交新农合)
+1. [以军称约1000吨武器已运抵以色列](https://so.toutiao.com/search?keyword=以军称约1000吨武器已运抵以色列)
+1. [河北唐山：盐碱地上金穗弯腰谷飘香](https://so.toutiao.com/search?keyword=河北唐山：盐碱地上金穗弯腰谷飘香)
+1. [法国为何高调介入中东乱局](https://so.toutiao.com/search?keyword=法国为何高调介入中东乱局)
+1. [狂犬病毒不只源于狂犬](https://so.toutiao.com/search?keyword=狂犬病毒不只源于狂犬)
+1. [女子吐槽高铁一盒葡萄60元仅200克](https://so.toutiao.com/search?keyword=女子吐槽高铁一盒葡萄60元仅200克)
+1. [法国酿酒商抗议进口西班牙葡萄酒](https://so.toutiao.com/search?keyword=法国酿酒商抗议进口西班牙葡萄酒)
 1. [7岁女孩天生2个子宫3个肾](https://so.toutiao.com/search?keyword=7岁女孩天生2个子宫3个肾)
 1. [毛里塔尼亚官员谈“一带一路”倡议](https://so.toutiao.com/search?keyword=毛里塔尼亚官员谈“一带一路”倡议)
 1. [酒店保安驱赶避雨儿童](https://so.toutiao.com/search?keyword=酒店保安驱赶避雨儿童)
-1. [男子买砗磲摆件3年后被刑拘](https://so.toutiao.com/search?keyword=男子买砗磲摆件3年后被刑拘)
 1. [成都地铁回应乘客拿油纸伞进站被拦](https://so.toutiao.com/search?keyword=成都地铁回应乘客拿油纸伞进站被拦)
 1. [台媒：世界两场战争给台湾的警惕](https://so.toutiao.com/search?keyword=台媒：世界两场战争给台湾的警惕)
 1. [四川泸州坠江宝马打捞现场](https://so.toutiao.com/search?keyword=四川泸州坠江宝马打捞现场)
-1. [科大讯飞回应美国AI芯片出口管制](https://so.toutiao.com/search?keyword=科大讯飞回应美国AI芯片出口管制)
 1. [近五年来A股公司累计分红8.2万亿元](https://so.toutiao.com/search?keyword=近五年来A股公司累计分红8.2万亿元)
 1. [拜登：不希望与俄罗斯作战](https://so.toutiao.com/search?keyword=拜登：不希望与俄罗斯作战)
-1. [警方通报女童遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=警方通报女童遭开门杀后被公交碾压)
 1. [李大霄谈沪指创年内新低的主要原因](https://so.toutiao.com/search?keyword=李大霄谈沪指创年内新低的主要原因)
 1. [沈阳城市建设学院 告白](https://so.toutiao.com/search?keyword=沈阳城市建设学院+告白)
 1. [拜登呼吁民众同意对以色列军援](https://so.toutiao.com/search?keyword=拜登呼吁民众同意对以色列军援)
@@ -67,10 +83,8 @@
 1. [共建“一带一路”：众人拾柴火焰高](https://so.toutiao.com/search?keyword=共建“一带一路”：众人拾柴火焰高)
 1. [嘲讽50岁顾客主播因拒绝道歉被开除](https://so.toutiao.com/search?keyword=嘲讽50岁顾客主播因拒绝道歉被开除)
 1. [美媒关注日首次海上试射电磁轨道炮](https://so.toutiao.com/search?keyword=美媒关注日首次海上试射电磁轨道炮)
-1. [网友：智利总统来找我买水晶了](https://so.toutiao.com/search?keyword=网友：智利总统来找我买水晶了)
 1. [18名驴友被困秦岭现场救援视频曝光](https://so.toutiao.com/search?keyword=18名驴友被困秦岭现场救援视频曝光)
 1. [醉酒男子深夜裸身爬进女邻居家](https://so.toutiao.com/search?keyword=醉酒男子深夜裸身爬进女邻居家)
-1. [疑似理想MEGA最强设计出炉](https://so.toutiao.com/search?keyword=疑似理想MEGA最强设计出炉)
 1. [满级人类的高光时刻](https://so.toutiao.com/search?keyword=满级人类的高光时刻)
 1. [日媒称iPhone 15在中国“苦战”](https://so.toutiao.com/search?keyword=日媒称iPhone+15在中国“苦战”)
 1. [华夏基金：看好权益市场配置价值](https://so.toutiao.com/search?keyword=华夏基金：看好权益市场配置价值)
@@ -80,14 +94,11 @@
 1. [本轮巴以冲突已致以色列4834人受伤](https://so.toutiao.com/search?keyword=本轮巴以冲突已致以色列4834人受伤)
 1. [儿童应如何预防肺炎支原体感染](https://so.toutiao.com/search?keyword=儿童应如何预防肺炎支原体感染)
 1. [情侣住酒店一年后收到5段亲密视频](https://so.toutiao.com/search?keyword=情侣住酒店一年后收到5段亲密视频)
-1. [货车驾驶室被铁锥贯穿 司机身亡](https://so.toutiao.com/search?keyword=货车驾驶室被铁锥贯穿+司机身亡)
 1. [一个医药记者的支原体肺炎笔记](https://so.toutiao.com/search?keyword=一个医药记者的支原体肺炎笔记)
 1. [尹烨称在蔡磊身上看到了霍金](https://so.toutiao.com/search?keyword=尹烨称在蔡磊身上看到了霍金)
-1. [老人穿红衣进羊圈被羊顶撞身亡](https://so.toutiao.com/search?keyword=老人穿红衣进羊圈被羊顶撞身亡)
 1. [哥伦比亚将开设驻巴勒斯坦大使馆](https://so.toutiao.com/search?keyword=哥伦比亚将开设驻巴勒斯坦大使馆)
 1. [巴以冲突里的高频词](https://so.toutiao.com/search?keyword=巴以冲突里的高频词)
 1. [港媒：西方在基建上应向中国学习](https://so.toutiao.com/search?keyword=港媒：西方在基建上应向中国学习)
-1. [河南大哥非洲开会 中式英语火出圈](https://so.toutiao.com/search?keyword=河南大哥非洲开会+中式英语火出圈)
 1. [Model X Plaid价格上调至94990美元](https://so.toutiao.com/search?keyword=Model+X Plaid价格上调至94990美元)
 1. [男童跟随父亲爬上竹梯不慎踩空](https://so.toutiao.com/search?keyword=男童跟随父亲爬上竹梯不慎踩空)
 1. [梁永安说当下需要好的分手文化](https://so.toutiao.com/search?keyword=梁永安说当下需要好的分手文化)
