--- a/archives/toutiao-search/2023-10-21.md
+++ b/archives/toutiao-search/2023-10-21.md
@@ -1,59 +1,71 @@
 # 2023-10-21
 
-共 114 条
+共 125 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 21 2023 08:22:55 GMT+0800 (China Standard Time) -->
-1. [前车油量耗尽 后车司机看手机撞上](https://so.toutiao.com/search?keyword=前车油量耗尽+后车司机看手机撞上)
-1. [上海高架“拳王”打晕变道司机](https://so.toutiao.com/search?keyword=上海高架“拳王”打晕变道司机)
-1. [又是一年好“丰景”](https://so.toutiao.com/search?keyword=又是一年好“丰景”)
+<!-- 最后更新时间 Sat Oct 21 2023 09:37:12 GMT+0800 (China Standard Time) -->
 1. [央视专访俄罗斯总统普京](https://so.toutiao.com/search?keyword=央视专访俄罗斯总统普京)
-1. [幼儿园里孩子们体验剥玉米](https://so.toutiao.com/search?keyword=幼儿园里孩子们体验剥玉米)
-1. [以色列逮捕哈马斯发言人等60多人](https://so.toutiao.com/search?keyword=以色列逮捕哈马斯发言人等60多人)
-1. [警方公开征集一女网红违法线索](https://so.toutiao.com/search?keyword=警方公开征集一女网红违法线索)
-1. [美称将制裁伊朗导弹活动 中方回应](https://so.toutiao.com/search?keyword=美称将制裁伊朗导弹活动+中方回应)
+1. [青岛啤酒涉事工厂曾被称为智慧工厂](https://so.toutiao.com/search?keyword=青岛啤酒涉事工厂曾被称为智慧工厂)
+1. [又是一年好“丰景”](https://so.toutiao.com/search?keyword=又是一年好“丰景”)
+1. [上海高架“拳王”打晕变道司机](https://so.toutiao.com/search?keyword=上海高架“拳王”打晕变道司机)
+1. [李玟今日于武汉安葬](https://so.toutiao.com/search?keyword=李玟今日于武汉安葬)
+1. [以防长公布对加沙地带战争计划](https://so.toutiao.com/search?keyword=以防长公布对加沙地带战争计划)
+1. [加沙幸存小女孩被吓到不会哭泣](https://so.toutiao.com/search?keyword=加沙幸存小女孩被吓到不会哭泣)
+1. [新郎去接亲百名乡亲拦车讨喜](https://so.toutiao.com/search?keyword=新郎去接亲百名乡亲拦车讨喜)
 1. [北京公交司机开车戴耳机养鸟系杜撰](https://so.toutiao.com/search?keyword=北京公交司机开车戴耳机养鸟系杜撰)
-1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
-1. [伊朗警告“其它各方”或卷入战争](https://so.toutiao.com/search?keyword=伊朗警告“其它各方”或卷入战争)
+1. [肺炎支原体感染11月或将迎感染高峰](https://so.toutiao.com/search?keyword=肺炎支原体感染11月或将迎感染高峰)
 1. [河北千亩农田被挖成大坑](https://so.toutiao.com/search?keyword=河北千亩农田被挖成大坑)
+1. [以色列逮捕哈马斯发言人等60多人](https://so.toutiao.com/search?keyword=以色列逮捕哈马斯发言人等60多人)
 1. [巴以地区冲突引发“蝴蝶效应”](https://so.toutiao.com/search?keyword=巴以地区冲突引发“蝴蝶效应”)
 1. [伊朗警告美国不要向以色列运送武器](https://so.toutiao.com/search?keyword=伊朗警告美国不要向以色列运送武器)
-1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
-1. [台风“三巴”致广东茂名多地受灾](https://so.toutiao.com/search?keyword=台风“三巴”致广东茂名多地受灾)
+1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
 1. [河南大哥非洲开会 中式英语火出圈](https://so.toutiao.com/search?keyword=河南大哥非洲开会+中式英语火出圈)
-1. [84岁钢琴家刘诗昆得子 发文感谢爱人](https://so.toutiao.com/search?keyword=84岁钢琴家刘诗昆得子+发文感谢爱人)
+1. [宁波一家三口相继患上支原体肺炎](https://so.toutiao.com/search?keyword=宁波一家三口相继患上支原体肺炎)
+1. [警方公开征集一女网红违法线索](https://so.toutiao.com/search?keyword=警方公开征集一女网红违法线索)
 1. [杨迪为猫狗发声：可以不爱但别伤害](https://so.toutiao.com/search?keyword=杨迪为猫狗发声：可以不爱但别伤害)
+1. [前车油量耗尽 后车司机看手机撞上](https://so.toutiao.com/search?keyword=前车油量耗尽+后车司机看手机撞上)
+1. [市监局调查啤酒厂职工原料仓小便](https://so.toutiao.com/search?keyword=市监局调查啤酒厂职工原料仓小便)
+1. [潘家园摊主谈卖摆件给智利总统](https://so.toutiao.com/search?keyword=潘家园摊主谈卖摆件给智利总统)
+1. [戈麦斯将被剥夺世界杯冠军头衔](https://so.toutiao.com/search?keyword=戈麦斯将被剥夺世界杯冠军头衔)
+1. [青岛啤酒公司回应员工在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒公司回应员工在原料仓小便)
+1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
+1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
+1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
+1. [科大讯飞回应美国AI芯片出口管制](https://so.toutiao.com/search?keyword=科大讯飞回应美国AI芯片出口管制)
+1. [84岁钢琴家刘诗昆得子 发文感谢爱人](https://so.toutiao.com/search?keyword=84岁钢琴家刘诗昆得子+发文感谢爱人)
+1. [华人对黑人社区的贡献有多大](https://so.toutiao.com/search?keyword=华人对黑人社区的贡献有多大)
+1. [曝华为昇腾910B可对标英伟达A100](https://so.toutiao.com/search?keyword=曝华为昇腾910B可对标英伟达A100)
+1. [巴勒斯坦红新月会称库存已完全耗尽](https://so.toutiao.com/search?keyword=巴勒斯坦红新月会称库存已完全耗尽)
+1. [证监会连发三份指引](https://so.toutiao.com/search?keyword=证监会连发三份指引)
+1. [董宇辉求俞敏洪带他去相亲](https://so.toutiao.com/search?keyword=董宇辉求俞敏洪带他去相亲)
+1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
+1. [美战略轰炸机首降韩国 朝鲜发警告](https://so.toutiao.com/search?keyword=美战略轰炸机首降韩国+朝鲜发警告)
+1. [联合国秘书长古特雷斯到访拉法口岸](https://so.toutiao.com/search?keyword=联合国秘书长古特雷斯到访拉法口岸)
+1. [哈马斯宣布释放两名美国人](https://so.toutiao.com/search?keyword=哈马斯宣布释放两名美国人)
+1. [周润发现身香港小店拼桌用餐](https://so.toutiao.com/search?keyword=周润发现身香港小店拼桌用餐)
+1. [女司机不卸车衣盲开几米后追尾](https://so.toutiao.com/search?keyword=女司机不卸车衣盲开几米后追尾)
+1. [A股“市场底”还有多远](https://so.toutiao.com/search?keyword=A股“市场底”还有多远)
+1. [专家：美须在重大议题上同中国合作](https://so.toutiao.com/search?keyword=专家：美须在重大议题上同中国合作)
+1. [中方将派团出席巴勒斯坦问题峰会](https://so.toutiao.com/search?keyword=中方将派团出席巴勒斯坦问题峰会)
+1. [疑似理想MEGA最强设计出炉](https://so.toutiao.com/search?keyword=疑似理想MEGA最强设计出炉)
+1. [专家谈为什么教培行业必须“死”](https://so.toutiao.com/search?keyword=专家谈为什么教培行业必须“死”)
+1. [警方通报女童遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=警方通报女童遭开门杀后被公交碾压)
+1. [村干部为何频繁催交新农合](https://so.toutiao.com/search?keyword=村干部为何频繁催交新农合)
+1. [哪些不良饮食习惯会增加癌症风险](https://so.toutiao.com/search?keyword=哪些不良饮食习惯会增加癌症风险)
+1. [货车驾驶室被铁锥贯穿 司机身亡](https://so.toutiao.com/search?keyword=货车驾驶室被铁锥贯穿+司机身亡)
+1. [夫妻俩骑行东北借宿废弃铁皮屋](https://so.toutiao.com/search?keyword=夫妻俩骑行东北借宿废弃铁皮屋)
+1. [幼儿园里孩子们体验剥玉米](https://so.toutiao.com/search?keyword=幼儿园里孩子们体验剥玉米)
+1. [美称将制裁伊朗导弹活动 中方回应](https://so.toutiao.com/search?keyword=美称将制裁伊朗导弹活动+中方回应)
+1. [伊朗警告“其它各方”或卷入战争](https://so.toutiao.com/search?keyword=伊朗警告“其它各方”或卷入战争)
+1. [台风“三巴”致广东茂名多地受灾](https://so.toutiao.com/search?keyword=台风“三巴”致广东茂名多地受灾)
 1. [男孩被打哭 妈妈看到视频后笑懵了](https://so.toutiao.com/search?keyword=男孩被打哭+妈妈看到视频后笑懵了)
 1. [市监局回应啤酒厂职工原料仓小便](https://so.toutiao.com/search?keyword=市监局回应啤酒厂职工原料仓小便)
-1. [科大讯飞回应美国AI芯片出口管制](https://so.toutiao.com/search?keyword=科大讯飞回应美国AI芯片出口管制)
-1. [肺炎支原体感染11月或将迎感染高峰](https://so.toutiao.com/search?keyword=肺炎支原体感染11月或将迎感染高峰)
-1. [青岛啤酒公司回应员工在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒公司回应员工在原料仓小便)
-1. [女司机不卸车衣盲开几米后追尾](https://so.toutiao.com/search?keyword=女司机不卸车衣盲开几米后追尾)
 1. [广西一企业爆炸致2死4伤4失联](https://so.toutiao.com/search?keyword=广西一企业爆炸致2死4伤4失联)
-1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
-1. [董宇辉求俞敏洪带他去相亲](https://so.toutiao.com/search?keyword=董宇辉求俞敏洪带他去相亲)
-1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
-1. [曝华为昇腾910B可对标英伟达A100](https://so.toutiao.com/search?keyword=曝华为昇腾910B可对标英伟达A100)
-1. [宁波一家三口相继患上支原体肺炎](https://so.toutiao.com/search?keyword=宁波一家三口相继患上支原体肺炎)
-1. [美战略轰炸机首降韩国 朝鲜发警告](https://so.toutiao.com/search?keyword=美战略轰炸机首降韩国+朝鲜发警告)
-1. [证监会连发三份指引](https://so.toutiao.com/search?keyword=证监会连发三份指引)
-1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
 1. [儿童积木现不雅图案 商家赔2元](https://so.toutiao.com/search?keyword=儿童积木现不雅图案+商家赔2元)
-1. [以防长公布对加沙地带战争计划](https://so.toutiao.com/search?keyword=以防长公布对加沙地带战争计划)
-1. [疑似理想MEGA最强设计出炉](https://so.toutiao.com/search?keyword=疑似理想MEGA最强设计出炉)
-1. [货车驾驶室被铁锥贯穿 司机身亡](https://so.toutiao.com/search?keyword=货车驾驶室被铁锥贯穿+司机身亡)
-1. [专家谈为什么教培行业必须“死”](https://so.toutiao.com/search?keyword=专家谈为什么教培行业必须“死”)
-1. [A股“市场底”还有多远](https://so.toutiao.com/search?keyword=A股“市场底”还有多远)
-1. [潘家园摊主谈卖摆件给智利总统](https://so.toutiao.com/search?keyword=潘家园摊主谈卖摆件给智利总统)
 1. [老人穿红衣进羊圈被羊顶撞身亡](https://so.toutiao.com/search?keyword=老人穿红衣进羊圈被羊顶撞身亡)
-1. [警方通报女童遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=警方通报女童遭开门杀后被公交碾压)
-1. [夫妻俩骑行东北借宿废弃铁皮屋](https://so.toutiao.com/search?keyword=夫妻俩骑行东北借宿废弃铁皮屋)
 1. [男子买砗磲摆件3年后被刑拘](https://so.toutiao.com/search?keyword=男子买砗磲摆件3年后被刑拘)
 1. [中国驻多国使馆发布紧急提醒](https://so.toutiao.com/search?keyword=中国驻多国使馆发布紧急提醒)
-1. [戈麦斯将被剥夺世界杯冠军头衔](https://so.toutiao.com/search?keyword=戈麦斯将被剥夺世界杯冠军头衔)
-1. [新郎去接亲百名乡亲拦车讨喜](https://so.toutiao.com/search?keyword=新郎去接亲百名乡亲拦车讨喜)
 1. [网友：智利总统来找我买水晶了](https://so.toutiao.com/search?keyword=网友：智利总统来找我买水晶了)
-1. [村干部为何频繁催交新农合](https://so.toutiao.com/search?keyword=村干部为何频繁催交新农合)
 1. [以军称约1000吨武器已运抵以色列](https://so.toutiao.com/search?keyword=以军称约1000吨武器已运抵以色列)
 1. [河北唐山：盐碱地上金穗弯腰谷飘香](https://so.toutiao.com/search?keyword=河北唐山：盐碱地上金穗弯腰谷飘香)
 1. [法国为何高调介入中东乱局](https://so.toutiao.com/search?keyword=法国为何高调介入中东乱局)
@@ -110,7 +122,6 @@
 1. [曝阿根廷国脚戈麦斯将被禁赛2年](https://so.toutiao.com/search?keyword=曝阿根廷国脚戈麦斯将被禁赛2年)
 1. [张学友五月天成都演唱会同日开唱](https://so.toutiao.com/search?keyword=张学友五月天成都演唱会同日开唱)
 1. [巴以战地日记系列](https://so.toutiao.com/search?keyword=巴以战地日记系列)
-1. [加沙幸存小女孩被吓到不会哭泣](https://so.toutiao.com/search?keyword=加沙幸存小女孩被吓到不会哭泣)
 1. [四川绵阳：不明物体划过天空](https://so.toutiao.com/search?keyword=四川绵阳：不明物体划过天空)
 1. [新华社记者：希望和平早日到来](https://so.toutiao.com/search?keyword=新华社记者：希望和平早日到来)
 1. [首批人道主义救援物资集结拉法口岸](https://so.toutiao.com/search?keyword=首批人道主义救援物资集结拉法口岸)
