--- a/archives/toutiao-search/2023-10-21.md
+++ b/archives/toutiao-search/2023-10-21.md
@@ -1,57 +1,76 @@
 # 2023-10-21
 
-共 166 条
+共 181 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 21 2023 12:00:48 GMT+0800 (China Standard Time) -->
-1. [李玟雕像曝光](https://so.toutiao.com/search?keyword=李玟雕像曝光)
-1. [央视专访俄罗斯总统普京](https://so.toutiao.com/search?keyword=央视专访俄罗斯总统普京)
-1. [我国创新发展水平持续提升](https://so.toutiao.com/search?keyword=我国创新发展水平持续提升)
+<!-- 最后更新时间 Sat Oct 21 2023 13:06:00 GMT+0800 (China Standard Time) -->
 1. [李玟今日于武汉安葬](https://so.toutiao.com/search?keyword=李玟今日于武汉安葬)
-1. [宁波一家三口相继患上支原体肺炎](https://so.toutiao.com/search?keyword=宁波一家三口相继患上支原体肺炎)
+1. [陕西省委：坚决拥护中央审查调查韩勇](https://so.toutiao.com/search?keyword=陕西省委：坚决拥护中央审查调查韩勇)
+1. [我国创新发展水平持续提升](https://so.toutiao.com/search?keyword=我国创新发展水平持续提升)
+1. [央视专访俄罗斯总统普京](https://so.toutiao.com/search?keyword=央视专访俄罗斯总统普京)
+1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
 1. [以防长公布对加沙地带战争计划](https://so.toutiao.com/search?keyword=以防长公布对加沙地带战争计划)
-1. [库里和文班亚马开场跳球](https://so.toutiao.com/search?keyword=库里和文班亚马开场跳球)
-1. [前车油量耗尽 后车司机看手机撞上](https://so.toutiao.com/search?keyword=前车油量耗尽+后车司机看手机撞上)
+1. [知情者称小便者非青岛啤酒员工](https://so.toutiao.com/search?keyword=知情者称小便者非青岛啤酒员工)
+1. [李玟下葬画面曝光 老公和继女未现身](https://so.toutiao.com/search?keyword=李玟下葬画面曝光+老公和继女未现身)
 1. [北京公交司机开车戴耳机养鸟系杜撰](https://so.toutiao.com/search?keyword=北京公交司机开车戴耳机养鸟系杜撰)
-1. [河南大哥非洲开会 中式英语火出圈](https://so.toutiao.com/search?keyword=河南大哥非洲开会+中式英语火出圈)
-1. [巴以局势持续紧张多国加大斡旋力度](https://so.toutiao.com/search?keyword=巴以局势持续紧张多国加大斡旋力度)
+1. [李玟雕像曝光](https://so.toutiao.com/search?keyword=李玟雕像曝光)
+1. [美官员：质疑以色列担心工作遭报复](https://so.toutiao.com/search?keyword=美官员：质疑以色列担心工作遭报复)
 1. [以色列逮捕哈马斯发言人等60多人](https://so.toutiao.com/search?keyword=以色列逮捕哈马斯发言人等60多人)
 1. [巴以地区冲突引发“蝴蝶效应”](https://so.toutiao.com/search?keyword=巴以地区冲突引发“蝴蝶效应”)
+1. [海合会-东盟峰会在沙特首都举行](https://so.toutiao.com/search?keyword=海合会-东盟峰会在沙特首都举行)
 1. [12306回应高铁200克葡萄售价60元](https://so.toutiao.com/search?keyword=12306回应高铁200克葡萄售价60元)
+1. [大哥遛狗很严谨再小的狗都要牵狗绳](https://so.toutiao.com/search?keyword=大哥遛狗很严谨再小的狗都要牵狗绳)
+1. [前车油量耗尽 后车司机看手机撞上](https://so.toutiao.com/search?keyword=前车油量耗尽+后车司机看手机撞上)
+1. [四川坠江宝马打捞出水 6旬女性身亡](https://so.toutiao.com/search?keyword=四川坠江宝马打捞出水+6旬女性身亡)
 1. [美媒警告：美国可能卷入新地区战争](https://so.toutiao.com/search?keyword=美媒警告：美国可能卷入新地区战争)
-1. [女司机不卸车衣盲开几米后追尾](https://so.toutiao.com/search?keyword=女司机不卸车衣盲开几米后追尾)
 1. [警方公开征集一女网红违法线索](https://so.toutiao.com/search?keyword=警方公开征集一女网红违法线索)
-1. [中美俄三国学者谈全球发展与未来](https://so.toutiao.com/search?keyword=中美俄三国学者谈全球发展与未来)
-1. [国务院取消调整33个罚款事项](https://so.toutiao.com/search?keyword=国务院取消调整33个罚款事项)
-1. [潘家园摊主谈卖摆件给智利总统](https://so.toutiao.com/search?keyword=潘家园摊主谈卖摆件给智利总统)
 1. [市监局调查啤酒厂职工原料仓小便](https://so.toutiao.com/search?keyword=市监局调查啤酒厂职工原料仓小便)
 1. [河北千亩农田被挖成大坑](https://so.toutiao.com/search?keyword=河北千亩农田被挖成大坑)
-1. [为什么电视剧行业不挣钱了](https://so.toutiao.com/search?keyword=为什么电视剧行业不挣钱了)
+1. [潘家园摊主谈卖摆件给智利总统](https://so.toutiao.com/search?keyword=潘家园摊主谈卖摆件给智利总统)
 1. [青岛啤酒公司回应员工在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒公司回应员工在原料仓小便)
-1. [科大讯飞回应美国AI芯片出口管制](https://so.toutiao.com/search?keyword=科大讯飞回应美国AI芯片出口管制)
-1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
-1. [青岛啤酒涉事工厂曾被称为智慧工厂](https://so.toutiao.com/search?keyword=青岛啤酒涉事工厂曾被称为智慧工厂)
+1. [女司机不卸车衣盲开几米后追尾](https://so.toutiao.com/search?keyword=女司机不卸车衣盲开几米后追尾)
 1. [警方通报女童遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=警方通报女童遭开门杀后被公交碾压)
-1. [女子3次徒手将带油卤味偷塞包里](https://so.toutiao.com/search?keyword=女子3次徒手将带油卤味偷塞包里)
+1. [青岛啤酒涉事工厂曾被称为智慧工厂](https://so.toutiao.com/search?keyword=青岛啤酒涉事工厂曾被称为智慧工厂)
+1. [乌度卡：我们很满意阿门·汤普森](https://so.toutiao.com/search?keyword=乌度卡：我们很满意阿门·汤普森)
+1. [侯办称柯文哲提见面 柯办指侯邀约](https://so.toutiao.com/search?keyword=侯办称柯文哲提见面+柯办指侯邀约)
 1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
+1. [女子3次徒手将带油卤味偷塞包里](https://so.toutiao.com/search?keyword=女子3次徒手将带油卤味偷塞包里)
+1. [山东泰山发布伤情公告](https://so.toutiao.com/search?keyword=山东泰山发布伤情公告)
+1. [工信部：我国算力规模位居全球第二](https://so.toutiao.com/search?keyword=工信部：我国算力规模位居全球第二)
+1. [湖北省委巡视组原组长樊仁富被查](https://so.toutiao.com/search?keyword=湖北省委巡视组原组长樊仁富被查)
+1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
+1. [美共和党人将重新推选众议长候选人](https://so.toutiao.com/search?keyword=美共和党人将重新推选众议长候选人)
+1. [美战略轰炸机首降韩国 朝鲜发警告](https://so.toutiao.com/search?keyword=美战略轰炸机首降韩国+朝鲜发警告)
+1. [国安主帅：胜利源自团结拼搏](https://so.toutiao.com/search?keyword=国安主帅：胜利源自团结拼搏)
+1. [云茂高速茂名段因积水碎石交通中断](https://so.toutiao.com/search?keyword=云茂高速茂名段因积水碎石交通中断)
+1. [为什么电视剧行业不挣钱了](https://so.toutiao.com/search?keyword=为什么电视剧行业不挣钱了)
+1. [女子吐槽高铁一盒葡萄60元仅200克](https://so.toutiao.com/search?keyword=女子吐槽高铁一盒葡萄60元仅200克)
+1. [台风“三巴”已移出雷州半岛](https://so.toutiao.com/search?keyword=台风“三巴”已移出雷州半岛)
+1. [狗是人类最忠诚的朋友](https://so.toutiao.com/search?keyword=狗是人类最忠诚的朋友)
+1. [布达佩斯站覃海洋100米蛙泳夺冠](https://so.toutiao.com/search?keyword=布达佩斯站覃海洋100米蛙泳夺冠)
+1. [84岁钢琴家刘诗昆得子 发文感谢爱人](https://so.toutiao.com/search?keyword=84岁钢琴家刘诗昆得子+发文感谢爱人)
+1. [国务院取消调整33个罚款事项](https://so.toutiao.com/search?keyword=国务院取消调整33个罚款事项)
+1. [又有领导干部被点名“假离婚”](https://so.toutiao.com/search?keyword=又有领导干部被点名“假离婚”)
+1. [成都地铁回应乘客拿油纸伞进站被拦](https://so.toutiao.com/search?keyword=成都地铁回应乘客拿油纸伞进站被拦)
+1. [当专业医生看医疗剧《问心》](https://so.toutiao.com/search?keyword=当专业医生看医疗剧《问心》)
+1. [全国消防大比武](https://so.toutiao.com/search?keyword=全国消防大比武)
+1. [宁波一家三口相继患上支原体肺炎](https://so.toutiao.com/search?keyword=宁波一家三口相继患上支原体肺炎)
+1. [库里和文班亚马开场跳球](https://so.toutiao.com/search?keyword=库里和文班亚马开场跳球)
+1. [河南大哥非洲开会 中式英语火出圈](https://so.toutiao.com/search?keyword=河南大哥非洲开会+中式英语火出圈)
+1. [巴以局势持续紧张多国加大斡旋力度](https://so.toutiao.com/search?keyword=巴以局势持续紧张多国加大斡旋力度)
+1. [中美俄三国学者谈全球发展与未来](https://so.toutiao.com/search?keyword=中美俄三国学者谈全球发展与未来)
+1. [科大讯飞回应美国AI芯片出口管制](https://so.toutiao.com/search?keyword=科大讯飞回应美国AI芯片出口管制)
 1. [老人差点被洪水冲走 几位大哥出手](https://so.toutiao.com/search?keyword=老人差点被洪水冲走+几位大哥出手)
 1. [巴勒斯坦与巴基斯坦讨论巴以局势](https://so.toutiao.com/search?keyword=巴勒斯坦与巴基斯坦讨论巴以局势)
 1. [暴力冲闯中领馆嫌犯被击毙视频公布](https://so.toutiao.com/search?keyword=暴力冲闯中领馆嫌犯被击毙视频公布)
-1. [美战略轰炸机首降韩国 朝鲜发警告](https://so.toutiao.com/search?keyword=美战略轰炸机首降韩国+朝鲜发警告)
-1. [84岁钢琴家刘诗昆得子 发文感谢爱人](https://so.toutiao.com/search?keyword=84岁钢琴家刘诗昆得子+发文感谢爱人)
-1. [陕西省委：坚决拥护中央审查调查韩勇](https://so.toutiao.com/search?keyword=陕西省委：坚决拥护中央审查调查韩勇)
 1. [周润发现身香港小店拼桌用餐](https://so.toutiao.com/search?keyword=周润发现身香港小店拼桌用餐)
 1. [美国加州州长将访华有何看点](https://so.toutiao.com/search?keyword=美国加州州长将访华有何看点)
 1. [媒体谈美方一边倒支持以色列遭抗议](https://so.toutiao.com/search?keyword=媒体谈美方一边倒支持以色列遭抗议)
 1. [俞敏洪李彦宏久违同框](https://so.toutiao.com/search?keyword=俞敏洪李彦宏久违同框)
-1. [女子吐槽高铁一盒葡萄60元仅200克](https://so.toutiao.com/search?keyword=女子吐槽高铁一盒葡萄60元仅200克)
-1. [大哥遛狗很严谨再小的狗都要牵狗绳](https://so.toutiao.com/search?keyword=大哥遛狗很严谨再小的狗都要牵狗绳)
 1. [男子开宝马高速拦车借钱加油行骗](https://so.toutiao.com/search?keyword=男子开宝马高速拦车借钱加油行骗)
 1. [多维度数据展示中国经济强劲脉动](https://so.toutiao.com/search?keyword=多维度数据展示中国经济强劲脉动)
-1. [全国消防大比武](https://so.toutiao.com/search?keyword=全国消防大比武)
 1. [广西爆炸企业曾因环境违法责令改正](https://so.toutiao.com/search?keyword=广西爆炸企业曾因环境违法责令改正)
 1. [马来西亚前总理质疑美对以色列支持](https://so.toutiao.com/search?keyword=马来西亚前总理质疑美对以色列支持)
-1. [成都地铁回应乘客拿油纸伞进站被拦](https://so.toutiao.com/search?keyword=成都地铁回应乘客拿油纸伞进站被拦)
 1. [巴勒斯坦总统和法国总统通电话](https://so.toutiao.com/search?keyword=巴勒斯坦总统和法国总统通电话)
 1. [四川泸州坠江宝马打捞现场](https://so.toutiao.com/search?keyword=四川泸州坠江宝马打捞现场)
 1. [又是一年好“丰景”](https://so.toutiao.com/search?keyword=又是一年好“丰景”)
@@ -61,13 +80,11 @@
 1. [加沙居民早起排队3小时抢面饼](https://so.toutiao.com/search?keyword=加沙居民早起排队3小时抢面饼)
 1. [广西人大常委会原副主任张秀隆被查](https://so.toutiao.com/search?keyword=广西人大常委会原副主任张秀隆被查)
 1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
-1. [又有领导干部被点名“假离婚”](https://so.toutiao.com/search?keyword=又有领导干部被点名“假离婚”)
 1. [听障拉拉队员凭借指挥手势动作整齐](https://so.toutiao.com/search?keyword=听障拉拉队员凭借指挥手势动作整齐)
 1. [俄签令终止俄芬间促进边境合作协议](https://so.toutiao.com/search?keyword=俄签令终止俄芬间促进边境合作协议)
 1. [海港曾一度17分领跑 近7轮仅获7分](https://so.toutiao.com/search?keyword=海港曾一度17分领跑+近7轮仅获7分)
 1. [以总理对士兵说：要像狮子一样战斗](https://so.toutiao.com/search?keyword=以总理对士兵说：要像狮子一样战斗)
 1. [曝赛前海港通知夺冠后开放更衣室](https://so.toutiao.com/search?keyword=曝赛前海港通知夺冠后开放更衣室)
-1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
 1. [华人对黑人社区的贡献有多大](https://so.toutiao.com/search?keyword=华人对黑人社区的贡献有多大)
 1. [货车驾驶室被铁锥贯穿 司机身亡](https://so.toutiao.com/search?keyword=货车驾驶室被铁锥贯穿+司机身亡)
 1. [大凉山的羊是坐火车上街的](https://so.toutiao.com/search?keyword=大凉山的羊是坐火车上街的)
@@ -75,7 +92,6 @@
 1. [安徽砀山警方破获“网络水军”案](https://so.toutiao.com/search?keyword=安徽砀山警方破获“网络水军”案)
 1. [深圳一小区发生火灾现场传出燃爆声](https://so.toutiao.com/search?keyword=深圳一小区发生火灾现场传出燃爆声)
 1. [上海高架“拳王”打晕变道司机](https://so.toutiao.com/search?keyword=上海高架“拳王”打晕变道司机)
-1. [美官员：质疑以色列担心工作遭报复](https://so.toutiao.com/search?keyword=美官员：质疑以色列担心工作遭报复)
 1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
 1. [以军空袭加沙地带一教堂致18死](https://so.toutiao.com/search?keyword=以军空袭加沙地带一教堂致18死)
 1. [上海金融监管局局长会见摩根士丹利](https://so.toutiao.com/search?keyword=上海金融监管局局长会见摩根士丹利)
@@ -167,7 +183,6 @@
 1. [新华社记者：希望和平早日到来](https://so.toutiao.com/search?keyword=新华社记者：希望和平早日到来)
 1. [首批人道主义救援物资集结拉法口岸](https://so.toutiao.com/search?keyword=首批人道主义救援物资集结拉法口岸)
 1. [大巴车顶着交通执法人员前行数十米](https://so.toutiao.com/search?keyword=大巴车顶着交通执法人员前行数十米)
-1. [当专业医生看医疗剧《问心》](https://so.toutiao.com/search?keyword=当专业医生看医疗剧《问心》)
 1. [中国移动副总经理已赴河北省任职](https://so.toutiao.com/search?keyword=中国移动副总经理已赴河北省任职)
 1. [国考热门岗位竞争超“千里挑一”](https://so.toutiao.com/search?keyword=国考热门岗位竞争超“千里挑一”)
 <!-- END TOUTIAO -->
